Missed file from previous commit

--- a/test_plan.org
+++ b/test_plan.org
@@ -2,8 +2,8 @@
 
 * Build (Cmake)
 ~hello.c builds executable~
-[ ]MotorTest.c builds executable*
-MotorTest links to Motor.c
+~MotorTest.c builds executable~
+[ ]MotorTest links to Motor.c
 
 * Google Test 
 asserts trivial math expression
