Passed: MotorTest links to Motor.c

--- a/test_plan.org
+++ b/test_plan.org
@@ -3,7 +3,7 @@
 * Build (Cmake)
 ~hello.c builds executable~
 ~MotorTest.c builds executable~
-[ ]MotorTest links to Motor.c
+~MotorTest links to Motor.c~
 
 * Google Test 
 asserts trivial math expression
